# etlrules

./: AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  Makefile  README.md  README.rst  mkdocs.yml  pyproject.toml  pyrightconfig.json  repo.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
docs/: Makefile  api.md  conf.py  index.rst  installation.md  installation.rst  make.bat  usage.md  usage.rst
docs/stylesheets/: extra.css
etlrules/: __init__.py  engine.py  exceptions.py  plan.py  rule.py  runner.py
etlrules/backends/common/: aggregate.py  basic.py  datetime.py  expressions.py  numeric.py  strings.py  substitution.py  types.py
etlrules/backends/dask/: __init__.py  aggregate.py  base.py  basic.py  concat.py  conditions.py  datetime.py  expressions.py  fill.py  newcolumns.py  numeric.py  strings.py  types.py
etlrules/backends/pandas/: __init__.py  aggregate.py  base.py  basic.py  concat.py  conditions.py  datetime.py  expressions.py  newcolumns.py  numeric.py  strings.py  types.py  validation.py
etlrules/backends/polars/: __init__.py  aggregate.py  base.py  basic.py  conditions.py  datetime.py  expressions.py  joins.py  numeric.py  strings.py  (+1 more)
examples/csv2db/: csv2db.yml  plan.py
examples/db2csv/: csv_sample.csv  db2csv.yml  mydb.db  plan.py
finrules/: __init__.py  cli.py  data.py  engine.py  exceptions.py  plan.py  rule.py
tests/: __init__.py  conftest.py  csv2db.yml  test_app.py  test_engine.py  test_finrules.py  test_runner.py
tests/rules/: test_aggregate.py  test_basic.py  test_concat.py  test_conditions.py  test_datetime.py  test_fill.py  test_joins.py  test_newcolumns.py  test_numeric.py  test_rulesblock.py  test_serialization.py  test_sort.py  test_strings.py  test_types.py
tests/utils/: data.py
(+38 files in other folders)
