[project]
name = "etlrules"
version = "0.2.2"
description = "A python rule engine operating with data frames aimed at the financial services."
authors = ["Ciprian Miclaus <ciprianm@gmail.com>"]
readme = "README.md"
license =  "MIT"
requires-python = ">=3.9"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]


[dependencies]
pandas = "^2.1.0"
pyyaml = "^6.0.1"
pyarrow = {version = "^13.0.0", optional = true}
sqlalchemy = {version = "^2.0.23", optional = true}


[project.optional-dependencies]
polars = [
    "polars" = "0.19.12",
    #"polars-lts-cpu" = "0.19.12",
    "polars-business" = "0.3.11",
]
test = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = [
    "tox",
    "pre-commit",
    "virtualenv",
    "pip",
    "twine",
    "toml"
]

doc = [
    "mkdocs" = "^1.5.3",
    "mkdocs-include-markdown-plugin" = "^3.2.3",
    "mkdocs-material" = "^8.1.11",
    "mkdocstrings" = "^0.18.0",
    "mkdocs-material-extension" = "^1.0.3",
    "mkdocs-autorefs" = "^0.3.1",
    "mike" = "^1.1.2"
    ]


[project.urls]
homepage = "https://github.com/ciprianmiclaus/etlrules"
documentation = "https://ciprianmiclaus.github.io/etlrules/"
repository = "https://github.com/ciprianmiclaus/etlrules"
history = "https://github.com/ciprianmiclaus/etlrules/blob/main/HISTORY.md"
